pokerth/03-CmdFairePatches-boost-1.86.0.TXT
FAIRE PATCHS
====================================

!!! VERSION = 1.1.2


/!\ /!\ /!\ cd $HOME/05-builds/pokerth

mkdir /tmp/srcp

cp -v pokerth-1.1.2.tar.gz /tmp/srcp/

cd /tmp/srcp

tar -xzf pokerth-1.1.2.tar.gz


/!\ /!\ /!\
VOIR : /home/jnd/99-temp/srcp/
/!\ /!\ /!\


https://www.boost.org/doc/libs/1_85_0/libs/filesystem/doc/deprecated.html

1) PATCH BOOST VERSION >= 1.86.0
================================
1-1) MODIFIER pokerth-1.1.2-rc/src/engine/log.h
-----------------------------------------------
cp -R pokerth-1.1.2-rc pokerth-1.1.2-rc.new

cd pokerth-1.1.2-rc.new/src/engine
kwrite log.h

MODIFIER LIGNE 76 :
		return mySqliteLogFileName.directory_string();
DEVIENT :
		return mySqliteLogFileName.string();


ENREGISTRER et Quitter Kwrite & EFFACER fichier log.h~
rm -f log.h~

cd ../../..

!!! POUR VÉRIFIER
diff -aur pokerth-1.1.2-rc pokerth-1.1.2-rc.new


1-2) MODIFIER pokerth-1.1.2-rc/src/engine/log.cpp
-------------------------------------------------
cd pokerth-1.1.2-rc.new/src/engine
kwrite log.cpp

MODIFIER LIGNE 87 :
				sqlite3_open(mySqliteLogFileName.directory_string().c_str(), &mySqliteLogDb);
DEVIENT :
				sqlite3_open(mySqliteLogFileName.string().c_str(), &mySqliteLogDb);


ENREGISTRER et Quitter Kwrite & EFFACER fichier log.cpp~
rm -f log.cpp~

cd ../../..

!!! POUR VÉRIFIER
diff -aur pokerth-1.1.2-rc pokerth-1.1.2-rc.new


1-3) MODIFIER pokerth-1.1.2-rc/src/core/common/avatarmanager.cpp
----------------------------------------------------------------
cd pokerth-1.1.2-rc.new/src/core/common
kwrite avatarmanager.cpp

MODIFIER LIGNE 90 :
		m_cacheDir = tmpCachePath.directory_string();
DEVIENT :
		m_cacheDir = tmpCachePath.string();

MODIFIER LIGNE 94 :
		tmpRet = InternalReadDirectory((tmpDataPath / "gfx/avatars/default/people/").directory_string(), m_avatars);
DEVIENT :
		tmpRet = InternalReadDirectory((tmpDataPath / "gfx/avatars/default/people/").string(), m_avatars);

MODIFIER LIGNE 96 :
		tmpRet = InternalReadDirectory((tmpDataPath / "gfx/avatars/default/misc/").directory_string(), m_avatars);
DEVIENT :
		tmpRet = InternalReadDirectory((tmpDataPath / "gfx/avatars/default/misc/").string(), m_avatars);

MODIFIER LIGNE 103 :
		tmpRet = InternalReadDirectory(tmpCachePath.directory_string(), m_cachedAvatars);
DEVIENT :
		tmpRet = InternalReadDirectory(tmpCachePath.string(), m_cachedAvatars);

MODIFIER LIGNE 116 :
	string tmpFileName(filePath.file_string());
DEVIENT :
	string tmpFileName(filePath.string());

MODIFIER LIGNE 243 :
	string ext(extension(filePath));
DEVIENT :
	string ext(filePath.extension().string());

MODIFIER LIGNE 365 :
				string fileName(tmpPath.file_string());
DEVIENT :
				string fileName(tmpPath.string());

MODIFIER LIGNE 429 :
		cacheDir = cachePath.directory_string();
DEVIENT :
		cacheDir = cachePath.string();

MODIFIER LIGNE 444 :
					string fileString(filePath.file_string());
DEVIENT :
					string fileString(filePath.string());

MODIFIER LIGNE 449 :
						if (exists(filePath) && tmpBuf.FromString(basename(filePath))) {
DEVIENT :
						if (exists(filePath) && tmpBuf.FromString(filePath.stem().string())) {

MODIFIER LIGNE 523 :
				if (is_regular(i->status())) {
DEVIENT :
				if (is_regular_file(i->status())) {

MODIFIER LIGNE 524 :
					string md5sum(basename(i->path()));
DEVIENT :
					string md5sum(i->path().stem().string());

MODIFIER LIGNE 526 :
					string fileName(i->path().file_string());
DEVIENT :
					string fileName(i->path().string());



ENREGISTRER et Quitter Kwrite & EFFACER fichier avatarmanager.cpp~
rm -f avatarmanager.cpp~

cd ../../../..

!!! POUR VÉRIFIER
diff -aur pokerth-1.1.2-rc pokerth-1.1.2-rc.new


diff -aur pokerth-1.1.2-rc pokerth-1.1.2-rc.new > fix-build-with-boost-1.86.0.patch

/!\ /!\ /!\
VOIR : /home/jnd/99-temp/srcp/

rm -rf /home/jnd/99-temp/srcp

mkdir -p /home/jnd/99-temp/srcp
cp -v pokerth-1.1.2.tar.gz /home/jnd/99-temp/srcp/
cp -R pokerth-1.1.2-rc /home/jnd/99-temp/srcp/pokerth-1.1.2-rc
cp -R pokerth-1.1.2-rc.new /home/jnd/99-temp/srcp/pokerth-1.1.2-rc.new
ls /home/jnd/99-temp/srcp
/!\ /!\ /!\



rm -rf pokerth-1.1.2-rc.new


cd $HOME/05-builds/pokerth

mv -vf /tmp/srcp/fix-build-with-boost-1.86.0.patch .


5) QUAND PATCHES FINIS
=======================
rm -rf /tmp/srcp

sync

=================================================================
EXPLICATIONS LIGNES 243 449 524
===============================

src/core/common/avatarmanager.cpp: In static member function ‘static AvatarFileType AvatarManager::GetAvatarFileType(const std::string&)’:
src/core/common/avatarmanager.cpp:243:20: error: ‘extension’ was not declared in this scope
  243 |         string ext(extension(filePath));
      |                    ^~~~~~~~~


std::string extension(const path& p)

Replace extension(p) with p.extension().string()
extension(filePath) ==> filePath.extension().string()




src/core/common/avatarmanager.cpp:449:99: error: no matching function for call to ‘basename(boost::filesystem::path&)’
  449 |                                                 if (exists(filePath) && tmpBuf.FromString(basename(filePath))) {
      |                                                                                           ~~~~~~~~^~~~~~~~~~


src/core/common/avatarmanager.cpp:524:63: error: no matching function for call to ‘basename(const boost::filesystem::path&)’
  524 |                                         string md5sum(basename(i->path()));
      |                                                       ~~~~~~~~^~~~~~~~~~~



std::string basename(const path& p)

Replace basename(p) with p.stem().string()
basename(filePath) ==> filePath.stem().string()

basename(i->path()) ==> i->path().stem().string()




=================================================================
ANCIENS
========

